[package]
name = "smol-timeout"
description = "A way to poll a future until it or a timer completes."
version = "0.6.1"
homepage = "https://github.com/r3v2d0g/smol-timeout"
repository = "https://github.com/r3v2d0g/smol-timeout"
documentation = "https://docs.rs/smol-timeout"
keywords = ["async", "await", "future", "futures"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"

[dependencies]
async-io = "2.4"
pin-project-lite = "0.2"

[dev-dependencies]
futures-lite = "2.6"
